--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,27 @@ beautifulsoup4==4.12.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
 comm==0.2.2
+contourpy==1.1.1
+cycler==0.12.1
 debugpy==1.8.6
 decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
+fonttools==4.54.1
 frozendict==2.4.4
 h11==0.14.0
 html5lib==1.1
 idna==3.10
 importlib_metadata==8.5.0
+importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.12.3
 jedi==0.19.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.7
 lxml==5.3.0
+matplotlib==3.7.5
 matplotlib-inline==0.1.7
 multitasking==0.0.11
 nest-asyncio==1.6.0
@@ -31,12 +37,14 @@ parso==0.8.4
 peewee==3.17.6
 pexpect==4.9.0
 pickleshare==0.7.5
+pillow==10.4.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.18.0
+pyparsing==3.1.4
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
