--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ importlib_resources==6.4.5
 ipykernel==6.29.5
 ipython==8.12.3
 jedi==0.19.1
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
@@ -51,12 +52,15 @@ python-dotenv==1.0.1
 pytz==2024.2
 pyzmq==26.2.0
 requests==2.32.3
+scikit-learn==1.3.2
+scipy==1.10.1
 selenium==4.25.0
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 stack-data==0.6.3
+threadpoolctl==3.5.0
 tornado==6.4.1
 traitlets==5.14.3
 trio==0.26.2
