--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+annotated-types==0.7.0
+anyio==4.5.2
 asttokens==2.4.1
 attrs==24.2.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 comm==0.2.2
 contourpy==1.1.1
 cycler==0.12.1
@@ -11,6 +14,7 @@ debugpy==1.8.6
 decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.1.0
+fastapi==0.115.5
 fonttools==4.54.1
 frozendict==2.4.4
 h11==0.14.0
@@ -44,6 +48,8 @@ prompt_toolkit==3.0.48
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pydantic==2.9.2
+pydantic_core==2.23.4
 Pygments==2.18.0
 pyparsing==3.1.4
 PySocks==1.7.1
@@ -60,6 +66,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 stack-data==0.6.3
+starlette==0.41.2
 threadpoolctl==3.5.0
 tornado==6.4.1
 traitlets==5.14.3
@@ -68,6 +75,7 @@ trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+uvicorn==0.32.0
 wcwidth==0.2.13
 webdriver-manager==4.0.2
 webencodings==0.5.1
