--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,7 @@ trio==0.26.2
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.2
+Unidecode==1.3.8
 urllib3==2.2.3
 uvicorn==0.32.0
 wcwidth==0.2.13
