--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asttokens==2.4.1
 attrs==24.2.0
 backcall==0.2.0
 beautifulsoup4==4.12.3
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
@@ -17,6 +18,15 @@ executing==2.1.0
 fastapi==0.115.5
 fonttools==4.54.1
 frozendict==2.4.4
+google-api-core==2.24.0
+google-auth==2.37.0
+google-cloud-bigquery==3.27.0
+google-cloud-core==2.4.1
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.66.0
+grpcio==1.69.0
+grpcio-status==1.69.0
 h11==0.14.0
 html5lib==1.1
 idna==3.10
@@ -45,9 +55,13 @@ pickleshare==0.7.5
 pillow==10.4.0
 platformdirs==4.3.6
 prompt_toolkit==3.0.48
+proto-plus==1.25.0
+protobuf==5.29.2
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 Pygments==2.18.0
@@ -58,6 +72,7 @@ python-dotenv==1.0.1
 pytz==2024.2
 pyzmq==26.2.0
 requests==2.32.3
+rsa==4.9
 scikit-learn==1.3.2
 scipy==1.10.1
 selenium==4.25.0
