--- a/requirements.txt
+++ b/requirements.txt
@@ -1,108 +1,54 @@
-annotated-types==0.7.0
-anyio==4.5.2
-asttokens==2.4.1
-attrs==24.2.0
-backcall==0.2.0
+attrs==24.3.0
 beautifulsoup4==4.12.3
-cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
-comm==0.2.2
-contourpy==1.1.1
-cycler==0.12.1
-db-dtypes==1.3.1
-debugpy==1.8.6
-decorator==5.1.1
+cachetools==5.5.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
 exceptiongroup==1.2.2
-executing==2.1.0
-fastapi==0.115.5
-fonttools==4.54.1
-frozendict==2.4.4
+frozendict==2.4.6
 google-api-core==2.24.0
-google-auth==2.37.0
-google-auth-oauthlib==1.2.1
-google-cloud-bigquery==3.27.0
+google-auth==2.38.0
 google-cloud-core==2.4.1
+google-cloud-storage==2.19.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.66.0
-grpcio==1.69.0
-grpcio-status==1.69.0
 h11==0.14.0
 html5lib==1.1
 idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.12.3
-jedi==0.19.1
 joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.7
 lxml==5.3.0
-matplotlib==3.7.5
-matplotlib-inline==0.1.7
 multitasking==0.0.11
-nest-asyncio==1.6.0
 numpy==1.24.4
-oauthlib==3.2.2
 outcome==1.3.0.post0
-packaging==24.1
+packaging==24.2
 pandas==2.0.3
-pandas-gbq==0.26.1
-parso==0.8.4
-peewee==3.17.6
-pexpect==4.9.0
-pickleshare==0.7.5
-pillow==10.4.0
+peewee==3.17.8
 platformdirs==4.3.6
-prompt_toolkit==3.0.48
 proto-plus==1.25.0
-protobuf==5.29.2
-psutil==6.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==17.0.0
+protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydata-google-auth==1.8.2
-Pygments==2.18.0
-pyparsing==3.1.4
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
-pyzmq==26.2.0
 requests==2.32.3
-requests-oauthlib==2.0.0
 rsa==4.9
 scikit-learn==1.3.2
 scipy==1.10.1
-selenium==4.25.0
-six==1.16.0
+selenium==4.27.1
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
-stack-data==0.6.3
-starlette==0.41.2
 threadpoolctl==3.5.0
-tornado==6.4.1
-traitlets==5.14.3
-trio==0.26.2
+trio==0.27.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
-tzdata==2024.2
-Unidecode==1.3.8
+tzdata==2025.1
 urllib3==2.2.3
-uvicorn==0.32.0
-wcwidth==0.2.13
 webdriver-manager==4.0.2
 webencodings==0.5.1
 websocket-client==1.8.0
 wsproto==1.2.0
-yfinance==0.2.44
-zipp==3.20.2
+yfinance==0.2.52
