--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydata-google-auth==1.8.2
+PyMuPDF==1.24.11
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
@@ -61,4 +62,4 @@ webdriver-manager==4.0.2
 webencodings==0.5.1
 websocket-client==1.8.0
 wsproto==1.2.0
-yfinance==0.2.52
+yfinance==0.2.54
